This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

15-Aug-2002 (Lars Duening) (3.3.224)
   - (array.c) In the array-array operations, a comparison was made
        using unallocated memory (reported by Markus).

14-Aug-2002 (Lars Duening) (3.3.223)
   - (configure) Optimization option -funroll-all-loops seems to
        create buggy code, so I removed it from the configure.
   - (object.c) Efun tell_room() leaked memory.
   - (simulate.c) check_valid_path() leaked the pathname when
       an error occured.

14-Aug-2002 (Lars Duening) (3.3.222)
    - (comm.c) Compilation broke under BeOS.
    - (object.c, swap.c, simulate.c) Removed warnings.
    - (object.c) An error message printed memory garbage.
    - (array) Forgot to export array_cmp() and shrink_array() when
         using alists (reported by Markus).

14-Aug-2002 (Lars Duening)  (3.3.221)
    - (array, interpret.c, prolang.y) Added the symmetric difference
         operators '^' and '^=' for arrays; complemented '|' for arrays
         with '|='.
    - (array.c) Modified the sorting routine get_array_order() so that
         for small arrays linear-exchange is used instead of heapsort.
         This trades less overhead for worse complexity.

13-Aug-2002 (Lars Duening)  (3.3.220)
    - (configure) The VERBOSE_OPCPROF define in config.h got clobbered.
    - (interpret.c) I removed the copy-on-write for mappings again - 
         it broke more than it fixed.

13-Aug-2002 (Lars Duening)  (3.3.219)
    - (regexp, mregex) Changed the original RE package to return
         error codes instead of calling regerror(). This puts it more
         in line with the PCRE implementation.
    - (configure, setting files) PCRE is now compilation default; however
         I disabled it explicitedly in the setting files.
    - (regexp, pcre) Whenever the RE engine has to backtrack, the eval