@@ -20,12 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 224)
-(Parent-Version lpmud 3-3 223)
-(Version-Log "Corrected a fatal bug introduced with the new array operations.")
+(Project-Version lpmud 3-3 225)
+(Parent-Version lpmud 3-3 224)
+(Version-Log "Corrected a bug in the new array operations.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 15 Aug 2002 21:03:45 -0600")
+(Checkin-Time "Fri, 16 Aug 2002 23:26:52 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -45,8 +45,8 @@
                   "^src/lang\\.y$" "^src/make_func\\.c$" "src/mkfunc$"
                   "^src/stdstrings\\.h$" "^src/stdstrings\\.c$"
                   "^src/dftables$" "^src/pcre/chartables.c$"
-                  "autoconf/autom4te.cache/"
-                  "\\..*\\.swp$" "src/driver" ".gdb_history" ))
+                  "autoconf/autom4te.cache/" "gmon\\.out"
+                  "\\..*\\.swp$" "src/driver" "\\.gdb_history" ))
 (Project-Keywords (ReleaseMajor 3)
                   (ReleaseMinor 3)
                   (ReleaseMicro 0)
@@ -60,7 +60,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.7 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.42 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.287 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.288 644))
   (HISTORY (lpmud/f/49_HISTORY 1.263 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.15 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -69,20 +69,20 @@
   (src/configure (lpmud/d/0_configure 1.19.1.47 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.6 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.3 644))
-  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.10 644))
+  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.11 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
   (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.37 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.3 644))
 
-  (src/settings/README (lpmud/c/22_README 1.14.1.9 644))
+  (src/settings/README (lpmud/c/22_README 1.14.1.10 644))
   (src/settings/default (lpmud/c/23_default 1.13.1.5.1.19 744))
   (src/settings/native (lpmud/c/9_native 1.6 744))
   (src/settings/compat (lpmud/c/10_compat 1.7 744))
   (src/settings/alatia (lpmud/j/27_alatia 1.5 744))
   (src/settings/aoh (lpmud/q/10_aoh 1.2 644))
-  (src/settings/avalon (lpmud/d/9_avalon 1.3.1.2.1.8 744))
+  (src/settings/avalon (lpmud/d/9_avalon 1.3.1.2.1.9 744))
   (src/settings/bat (lpmud/q/5_bat 1.3 644))
   (src/settings/beutelland (lpmud/n/34_beutelland 1.2 744))
   (src/settings/carledon (lpmud/c/24_carledon 1.3.1.3 744))
@@ -101,7 +101,7 @@
   (src/settings/quovadis (lpmud/h/12_quovadis 1.1.1.5 744))
   (src/settings/silberland (lpmud/c/26_silberland 1.4.1.3 744))
   (src/settings/sticklib (lpmud/d/14_sticklib 1.2.1.1.1.3 744))
-  (src/settings/spin (lpmud/a/b/12_spin 1.1 744))
+  (src/settings/theland (lpmud/a/b/12_spin 1.2 744))
   (src/settings/tubmud (lpmud/c/27_tubmud 1.7.1.10 744))
   (src/settings/unitopia (lpmud/c/7_unitopia 1.6.1.4.1.12 744))
   (src/settings/wunderland (lpmud/d/24_wunderland 1.3.1.4 744))
@@ -115,7 +115,7 @@
   (src/actions.h (lpmud/d/11_actions.h 1.6.1.5 644))
   (src/actions.c (lpmud/d/12_actions.c 1.15.1.34 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.19 644))
-  (src/array.c (lpmud/d/12_array.c 1.46.1.41 644))
+  (src/array.c (lpmud/d/12_array.c 1.46.1.42 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.6 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.11 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
@@ -144,7 +144,7 @@
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.24 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.30 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.31 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.10 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.12 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.11 644))
