@@ -186,7 +186,7 @@
 #include <sys/types.h>
 #include <sys/stat.h>
 #ifdef MARK
-#include <prof.h>
+#include <profile.h>
 #endif
 
 #include "interpret.h"
