@@ -31,7 +31,7 @@ The provided settings:
   quovadis:        settings for Quo Vadis
   silberland:      settings for SilberLand
   sticklib:        settings for StickLib
-  spin:            settings for the mud of SPiN AG.
+  theland:         settings for The Land.
   tubmud:          settings for TubMud
   unitopia:        settings for UNItopia
   wunderland:      settings for WunderLand
